fixed footer title position on tablet

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -39,6 +39,7 @@
     grid-row: 3;
 
     @include on-tablet {
+      margin: 0;
       font-size: 56px;
       line-height: 47.6px;
 
